--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
+    "react-activity-calendar": "^2.2.10",
     "react-dom": "^18",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
