--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@sanity/client": "^6.20.0",
     "@sanity/types": "^3.45.0",
     "@tailwindcss/typography": "^0.5.13",
