--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-analytics/data": "^4.7.0",
     "@mui/material": "^5.15.20",
     "@sanity/client": "^6.20.0",
     "@sanity/types": "^3.45.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
+    "nextjs-google-analytics": "^2.3.3",
     "react": "^18",
     "react-activity-calendar": "^2.2.10",
     "react-dom": "^18",
